Change taskStatus -> status, add task event history
